# easy_mortgage_comparison

./: README.md  pyproject.toml
src/: main.py
src/computations/: __init__.py  payments.py
src/computations/constants/: __init__.py  periods.py
src/plotting/: plots.py
